--- a/.env
+++ b/.env
@@ -8,14 +8,14 @@ PORT=3001
 
 # MAIL_FROM=ronakshah7093@gmail.com
 # MAIL_ADDRESS=ronakshah7093@gmail.com
-# MAIL_PASSWORD=ronak@8080
+# MAIL_PASSWORD=
 # MAIL_SERVER=smtp.gmail.com
 # MAIL_PORT=465
 
 
-MAIL_FROM=prep5253@gmail.com
-MAIL_ADDRESS=prep5253@gmail.com
-MAIL_PASSWORD=preost@8080
-MAIL_SERVER=smtp.gmail.com
+MAIL_FROM=ronak.s@upsquare.in
+MAIL_ADDRESS=ronak.s@upsquare.in
+MAIL_PASSWORD=aE8Tt9Ch
+MAIL_SERVER=smtp.yandex.com
 MAIL_PORT=465
 
