add mail services

--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ PORT=3001
 # MAIL_PORT=465
 
 
-MAIL_FROM=ronak.s@upsquare.in
-MAIL_ADDRESS=ronak.s@upsquare.in
-MAIL_PASSWORD=aE8Tt9Ch
+MAIL_FROM=brijesh.b@upsquare.in
+MAIL_ADDRESS=brijesh.b@upsquare.in
+MAIL_PASSWORD=9FAE72FB-B81B
 MAIL_SERVER=smtp.yandex.com
 MAIL_PORT=465
 
