--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/express-handlebars": "^5.3.1",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "express-handlebars": "^5.3.5",
     "fs": "0.0.1-security",
+    "handlebars": "^4.7.7",
     "helmet": "^6.0.1",
     "moment": "^2.29.4",
     "nest-pg": "^0.3.5",
